fixed "view projects" and "view code" buttons on single project page when viewing on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -215,6 +215,10 @@ header {
   display: block;
   text-align: center;
   margin: 60px 0;
+  .btn {
+    display: block;
+    margin-bottom: 18px;
+  }
 }
 
 .technology-title {
@@ -299,5 +303,10 @@ footer {
   .slider-single img {
     width: initial;
     margin: auto;
+  }
+
+  .project-btns .btn {
+    display: inline-block;
+    margin-bottom: 0;
   }
 }
